feat: better portal + leaderboard
